--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock1.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock1.htm
@@ -32,12 +32,12 @@ $Date$
 |ELSE|
  (
 |FOR,%subtype,0,COUNT[RACESUBTYPES]-2,1,1|
-|RACESUBTYPE.%subtype|, 
+|RACESUBTYPE.%subtype|,
 |ENDFOR|
 |FOR,%subtype,COUNT[RACESUBTYPES]-1,COUNT[RACESUBTYPES]-1,1,1|
 |RACESUBTYPE.%subtype|
 |ENDFOR|
-) 
+)
 |ENDIF|
 <br />
 |CLASSLIST|</b></p>
@@ -120,12 +120,12 @@ $Date$
 |FOR,%DRtest,STRLEN[DR],STRLEN[DR],1,0|
 |IIF(%DRtest:0)|
 |ELSE|
-Damage Reduction |DR|, 
+Damage Reduction |DR|,
 |ENDIF|
 |ENDFOR|
 |IIF(SR:0)|
 |ELSE|
-Spell Resistance |SR|, 
+Spell Resistance |SR|,
 |ENDIF|
  |ABILITYALLLIST.Special Ability.VISIBLE.TYPE=SpecialQuality| </td>
  </tr>
@@ -139,7 +139,7 @@ Spell Resistance |SR|,
     <td width="25%"><b>Saves: </b></td>
     <td width="75%">
 |FOR,%checks,0,COUNT[CHECKS]-2,1,0|
-|CHECK.%checks.NAME|: |CHECK.%checks.TOTAL|, 
+|CHECK.%checks.NAME|: |CHECK.%checks.TOTAL|,
 |ENDFOR|
 |FOR,%checks,COUNT[CHECKS]-1,COUNT[CHECKS]-1,1,0|
 |CHECK.%checks.NAME|: |CHECK.%checks.TOTAL|
@@ -190,7 +190,7 @@ Spell Resistance |SR|,
 |FOR,%class,COUNT[SPELLRACE],COUNT[SPELLRACE]+COUNT[CLASSES]-1,1,1|
 |IIF(SPELLLISTMEMORIZE.%class:false)|
 |ELSE|
-|SPELLLISTCLASS.%class| (CL |SPELLLISTCLASS.%class.LEVEL|): 
+|SPELLLISTCLASS.%class| (CL |SPELLLISTCLASS.%class.LEVEL|):
 |FOR,%level,0,9,1,1|
 |FOR,%spelllevelcount,COUNT[SPELLSINBOOK.%class.%spellbook.%level],COUNT[SPELLSINBOOK.%class.%spellbook.%level],1,0|
 |IIF(%spelllevelcount:0)|
@@ -207,7 +207,7 @@ Spell Resistance |SR|,
 |ELSE|
 (DC |SPELLMEM.%class.%spellbook.%level.%spell.DC|)
 |ENDIF|
-, 
+,
 |ENDFOR|
 |FOR,%spell,COUNT[SPELLSINBOOK.%class.%spellbook.%level]-1,COUNT[SPELLSINBOOK.%class.%spellbook.%level]-1,1,0|
 |SPELLMEM.%class.%spellbook.%level.%spell.BONUSSPELL|<i>|TEXT.LOWER.SPELLMEM.%class.%spellbook.%level.%spell.NAME|</i>
@@ -233,10 +233,10 @@ Spell Resistance |SR|,
 <!-- Innate Spell-like Abilities -->
 |%SPELLLISTBOOK.0.0.1|
 <br /><b>Innate Spell-like Abilities:</b>
-|FOR,%spell,0,COUNT[SPELLSINBOOK0.1.0]-2,1,1|
+|FOR,%spell,0,COUNT[SPELLSINBOOK.0.1.0]-2,1,1|
 |SPELLMEM.0.1.0.%spell.NAME|,
 |ENDFOR|
-|FOR,%spell,COUNT[SPELLSINBOOK0.1.0]-1,COUNT[SPELLSINBOOK0.1.0]-1,1,1|
+|FOR,%spell,COUNT[SPELLSINBOOK.0.1.0]-1,COUNT[SPELLSINBOOK.0.1.0]-1,1,1|
 |SPELLMEM.0.1.0.%spell.NAME|
 |ENDFOR|
 |%|
@@ -264,8 +264,8 @@ Spell Resistance |SR|,
 
 |FOR,%class,COUNT[SPELLRACE],COUNT[CLASSES],1,1|
 |%SPELLLISTCLASS.%class|
-<br /><b>|SPELLLISTCLASS.%class|</b> - Spells per Day: (|FOR.0,9,1,\SPELLLISTCAST.%class.%\,NONE,/,0| DC:|SPELLLISTDC.%class.0| + spell level); 
-Known: 
+<br /><b>|SPELLLISTCLASS.%class|</b> - Spells per Day: (|FOR.0,9,1,\SPELLLISTCAST.%class.%\,NONE,/,0| DC:|SPELLLISTDC.%class.0| + spell level);
+Known:
 |FOR,%level,0,MAXSPELLLEVEL.%class,1,1|
 |%SPELLLISTBOOK.%class.%level.0|
 <b>Level |%level|:</b>
