--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock1.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock1.htm
@@ -21,13 +21,14 @@ $Date$
 <body>
 <span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</span>
 <p>
-<b>|NAME|<br />
+  <b>|NAME|<br />
 |GENDER.LONG| |RACE|; |SIZELONG|
 |IIF(RACETYPE:None)|
 |TEXT.TITLE.TYPE|
 |ELSE|
 |RACETYPE|
 |ENDIF|
+|MANUALWHITESPACE|
 |IIF(VAR.IF(var("COUNT[RACESUBTYPES]")==0;1;0):1)|
 |ELSE|
  (
@@ -38,43 +39,45 @@ $Date$
 |RACESUBTYPE.%subtype|
 |ENDFOR|
 )
+|ENDMANUALWHITESPACE|
 |ENDIF|
 <br />
-|CLASSLIST|</b></p>
+|CLASSLIST|</b>
+</p>
 <table width="75%" border="0" cellspacing="0" cellpadding="0" summary="Character Info Table">
   <tr valign="top">
-    <td width="25%"><b>Hit Dice: </b></td>
-    <td width="75%">|HITDICE| </td>
+    <td width="25%"><b>Hit Dice:</b></td>
+    <td width="75%">|HITDICE|</td>
   </tr>
 |IIF(VAR.IF(var("UseAlternateDamage")==0;1;0):1)|
   <tr valign="top">
-    <td width="25%"><b>Hit Points: </b></td>
-    <td width="75%">|HP| </td>
+    <td width="25%"><b>Hit Points:</b></td>
+    <td width="75%">|HP|</td>
   </tr>
 |ELSE|
   <tr valign="top">
-    <td width="25%"><b>Vitality: </b></td>
-    <td width="75%">|HP| </td>
+    <td width="25%"><b>Vitality:</b></td>
+    <td width="75%">|HP|</td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Wound Points: </b></td>
-    <td width="75%">|ALTHP| </td>
+    <td width="25%"><b>Wound Points:</b></td>
+    <td width="75%">|ALTHP|</td>
   </tr>
 |ENDIF|
   <tr valign="top">
-    <td width="25%"><b>Initiative: </b></td>
-    <td width="75%">|INITIATIVEMOD| </td>
+    <td width="25%"><b>Initiative:</b></td>
+    <td width="75%">|INITIATIVEMOD|</td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Speed: </b></td>
-    <td width="75%">|MOVEMENT| </td>
+    <td width="25%"><b>Speed:</b></td>
+    <td width="75%">|MOVEMENT|</td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>AC: </b></td>
+    <td width="25%"><b>AC:</b></td>
     <td width="75%">|AC.Total| (touch |AC.Touch|, flatfooted |AC.Flatfooted|)</td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Attacks: </b></td>
+    <td width="25%"><b>Attacks:</b></td>
     <td width="75%">
 |FOR,%weap,0,COUNT[EQTYPE.Weapon]-1,1,0|
 |WEAPON.%weap.NAME|
@@ -87,7 +90,7 @@ $Date$
     </td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Damage: </b></td>
+    <td width="25%"><b>Damage:</b></td>
     <td width="75%">
 |FOR,%weap,0,COUNT[EQTYPE.Weapon]-1,1,0|
 |WEAPON.%weap.NAME|
@@ -100,22 +103,22 @@ $Date$
     </td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Vision: </b></td>
-    <td width="75%">|VISION| </td>
+    <td width="25%"><b>Vision:</b></td>
+    <td width="75%">|VISION|</td>
   </tr>
 
   <tr valign="top">
-    <td width="25%"><b>Face / Reach: </b></td>
-    <td width="75%">|FACE| / |REACH| </td>
+    <td width="25%"><b>Face / Reach:</b></td>
+    <td width="75%">|FACE| / |REACH|</td>
   </tr>
 |IIF(count("ABILITIES";"CATEGORY=Special Ability";"TYPE=SpecialAttack";"VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")>0)|
   <tr valign="top">
-    <td width="25%"><b>Special Attacks: </b></td>
+    <td width="25%"><b>Special Attacks:</b></td>
     <td width="75%">|ABILITYALLLIST.Special Ability.VISIBLE.TYPE=SpecialAttack|</td>
   </tr>
 |ENDIF|
  <tr valign="top">
-    <td width="25%"><b>Special Qualities: </b></td>
+    <td width="25%"><b>Special Qualities:</b></td>
     <td width="75%">
 |FOR,%DRtest,STRLEN[DR],STRLEN[DR],1,0|
 |IIF(%DRtest:0)|
@@ -131,12 +134,12 @@ Spell Resistance |SR|,
  </tr>
 |%COUNT[SA]|
   <tr valign="top">
-    <td width="25%"><b>Special Abilities: </b></td>
+    <td width="25%"><b>Special Abilities:</b></td>
     <td width="75%">|SPECIALLIST|</td>
   </tr>
 |%|
   <tr valign="top">
-    <td width="25%"><b>Saves: </b></td>
+    <td width="25%"><b>Saves:</b></td>
     <td width="75%">
 |FOR,%checks,0,COUNT[CHECKS]-2,1,0|
 |CHECK.%checks.NAME|: |CHECK.%checks.TOTAL|,
@@ -147,7 +150,7 @@ Spell Resistance |SR|,
     </td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Abilities: </b></td>
+    <td width="25%"><b>Abilities:</b></td>
     <td width="75%">
 |FOR,%stat,0,COUNT[STATS]-2,1,1|
 |STAT.%stat.NAME|&nbsp;|STAT.%stat|&nbsp;(|STAT.%stat.MOD|),
@@ -158,24 +161,25 @@ Spell Resistance |SR|,
      </td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Skills: </b></td>
+    <td width="25%"><b>Skills:</b></td>
     <td width="75%">|FOR.0,COUNT[SKILLS],100,\SKILL.%.NAME\: \SKILL.%.TOTAL\;       , , ,0| </td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Feats: </b></td>
-    <td width="75%">|FEATALLLIST| </td>
+    <td width="25%"><b>Feats:</b></td>
+    <td width="75%">|FEATALLLIST|</td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Challenge Rating: </b></td>
-    <td width="75%">|CR| </td>
+    <td width="25%"><b>Challenge Rating:</b></td>
+    <td width="75%">|CR|</td>
   </tr>
   <tr valign="top">
-    <td width="25%"><b>Alignment: </b></td>
-    <td width="75%">|ALIGNMENT| </td>
+    <td width="25%"><b>Alignment:</b></td>
+    <td width="75%">|ALIGNMENT|</td>
   </tr>
 </table>
-|%REGION|<p> Region: |REGION| </p>|%|
-<p><b>Possessions: </b>|FOR.0,COUNT[EQUIPMENT],100,\EQ.%.NAME\; , , ,0|
+|%REGION|<p> Region: |REGION|</p>|%|
+<p>
+  <b>Possessions: </b>|FOR.0,COUNT[EQUIPMENT],100,\EQ.%.NAME\; , , ,0|
 </p>
 
 |%DOMAIN.1|
@@ -261,7 +265,6 @@ Spell Resistance |SR|,
 |ENDFOR|
 <!-- End Other Spell-Like Abilities -->
 
-
 |FOR,%class,COUNT[SPELLRACE],COUNT[CLASSES],1,1|
 |%SPELLLISTCLASS.%class|
 <br /><b>|SPELLLISTCLASS.%class|</b> - Spells per Day: (|FOR.0,9,1,\SPELLLISTCAST.%class.%\,NONE,/,0| DC:|SPELLLISTDC.%class.0| + spell level);
@@ -278,9 +281,6 @@ Known:
 |%|
 |ENDFOR|
 |ENDFOR|
-
 |%|
-
 </body>
 </html>
-
