--- a/outputsheets/d20/sciencefiction/htmlxml/csheet_dw2_statblock1.htm
+++ b/outputsheets/d20/sciencefiction/htmlxml/csheet_dw2_statblock1.htm
@@ -34,6 +34,7 @@ CR |CR|; |SIZELONG|
 |ELSE|
 |RACETYPE|
 |ENDIF|
+|MANUALWHITESPACE|
 |IIF(VAR.IF(var("COUNT[RACESUBTYPES]")==0;1;0):1)|
 ; 
 |ELSE|
@@ -46,6 +47,7 @@ CR |CR|; |SIZELONG|
 |ENDFOR|
 ); 
 |ENDIF|
+|ENDMANUALWHITESPACE|
 HD |HITDICE|; 
 |IIF(VAR.IF(var("UseAlternateDamage")==0;1;0):1)|
 hp |HP|;
