--- a/installers/release-notes/pcgen-release-notes-5158.html
+++ b/installers/release-notes/pcgen-release-notes-5158.html
@@ -169,6 +169,7 @@ would appreciate your feedback on the new source loading system.</p>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2297553">2297553</a> ]	add .NOSIGN to CHECK token</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2330943">2330943</a> ]	Allow CHOOSE to be used in races</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2332545">2332545</a> ]	Allow CHOOSE to be used in templates</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2359958">2359958</a> ]	Default old character sheet to GMGen only</li>
 </ul>
 
 <h3>Data Feature Requests</h3>
